--- a/.github/workflows/nodejs.condo.ci.yml
+++ b/.github/workflows/nodejs.condo.ci.yml
@@ -122,7 +122,7 @@ jobs:
       condorb: ${{ steps.detect-changes.outputs.condorb }}
       dev-api: ${{ steps.detect-changes.outputs.dev-api }}
       open-condo: ${{ steps.detect-changes.outputs.open-condo }}
-      registry: ${{ steps.detect-changes.outputs.registry }}
+      registry-importer: ${{ steps.detect-changes.outputs.registry-importer }}
       webhooks: ${{ steps.detect-changes.outputs.webhooks }}
     steps:
       - name: Checkout code with submodules
@@ -153,8 +153,8 @@ jobs:
               - '**/*.md'
               - '*'
               - '!.helm/**'
-            registry:
-              - 'apps/registry/**'
+            registry-importer:
+              - 'apps/registry-importer/**'
               - 'packages/**'
             webhooks:
               - 'packages/webhooks/**'
@@ -445,36 +445,14 @@ jobs:
             ./docker-logs
           retention-days: 2
 
-  run-webhooks-tests:
-    name: Webhooks Tests
-    runs-on: ubuntu-22.04
-    needs:
-      - authorize
-      - detect-changes
-    if: ${{ needs.detect-changes.outputs.webhooks == 'true' }}
-    steps:
-      - name: Checkout code with submodules
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          submodules: recursive
-          ssh-key: ${{ secrets.SSH_DOCK_SERVER_PRIVATE_KEY }}
-          ref: ${{ env.REF }}
-      - name: Install packages
-        run: |
-          npm i -g turbo
-          yarn install --immutable
-      - name: Test webhooks utils
-        run: yarn workspace @open-condo/webhooks jest
-
   run-registry-tests:
-    name: Registry Tests
+    name: Registry-importer Tests
     runs-on: ubuntu-22.04
     needs:
       - authorize
       - build-image
       - detect-changes
-    if: ${{ needs.detect-changes.outputs.registry == 'true' }}
+    if: ${{ needs.detect-changes.outputs.registry-importer == 'true' }}
     steps:
       - name: Login to cloud registry
         uses: docker/login-action@v3
@@ -497,14 +475,36 @@ jobs:
           docker run --network="host" --name condo-container -dit ${{ env.DOCKER_IMAGE_FULL }} sh
       - name: Prepare apps
         run: |
-          docker exec condo-container node bin/prepare.js -f condo registry
+          docker exec condo-container node bin/prepare.js -f condo registry-importer
       - name: Check migrations state
         run: |
-          docker exec condo-container yarn workspace @app/registry makemigrations --check
+          docker exec condo-container yarn workspace @app/registry-importer makemigrations --check
       - name: Run apps and tests
         run: |
           docker exec condo-container sh -c "(\
           yarn workspace @app/condo start & \
-          yarn workspace @app/registry start & \
-          node bin/wait-apps-apis.js -f condo registry) && \
-          yarn workspace @app/registry test"
+          yarn workspace @app/registry-importer start & \
+          node bin/wait-apps-apis.js -f condo registry-importer) && \
+          yarn workspace @app/registry-importer test"
+
+  run-webhooks-tests:
+    name: Webhooks Tests
+    runs-on: ubuntu-22.04
+    needs:
+      - authorize
+      - detect-changes
+    if: ${{ needs.detect-changes.outputs.webhooks == 'true' }}
+    steps:
+      - name: Checkout code with submodules
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+          ssh-key: ${{ secrets.SSH_DOCK_SERVER_PRIVATE_KEY }}
+          ref: ${{ env.REF }}
+      - name: Install packages
+        run: |
+          npm i -g turbo
+          yarn install --immutable
+      - name: Test webhooks utils
+        run: yarn workspace @open-condo/webhooks jest
